# BeyMeter

./: .gitignore  CMakeLists.txt  Makefile  README.md  poc.py
src/: hw.c  hw.h  main.c  screens.c  screens.h  splash.h
